# lec4

./: Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
models/: sgd.joblib  sgd_pipeline.joblib
notebooks/: 36120_AdvMLA_Lab4_Exercise1_Solutions.ipynb  36120_AdvMLA_Lab4_Exercise2_Solutions.ipynb
